# voxtral-server

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  docker-publish.yml
benchmarks/: CMakeLists.txt
config/: server.toml
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.with-model  docker-compose.tls.yml  docker-compose.yml  nginx-tls.conf
include/tts/: auth.hpp  backend.hpp  inference_pool.hpp  metrics.hpp  server.hpp  validation.hpp  version.hpp  version.hpp.in  voices.hpp
k8s/: configmap.yaml  deployment-gpu.yaml  deployment.yaml  namespace.yaml  networkpolicy-default-deny.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  resource-quota.yaml  service-gpu.yaml  service.yaml  serviceaccount.yaml
k8s/local/: all-in-one.yaml  ingress.yaml
src/: main.cpp
src/config/: config.cpp  config.hpp
src/logging/: logger.cpp  logger.hpp
src/server/: auth.cpp  http_adapter.cpp  http_adapter.hpp  metrics.cpp  request_handler.cpp  request_handler.hpp  server.cpp  validation.cpp
src/tts/: inference_pool.cpp  mock_backend.hpp  voices.cpp  voxtral_backend.cpp  voxtral_backend.hpp
tests/: CMakeLists.txt  test_auth.cpp  test_backend.cpp  test_binary_e2e.cpp  test_config.cpp  test_config_integration.cpp  test_http_adapter.cpp  test_inference_pool.cpp  test_inference_pool_integration.cpp  test_logger.cpp  test_logger_integration.cpp  test_metrics.cpp  test_request_handler.cpp  test_server.cpp  test_validation.cpp  test_voices.cpp  test_voices_integration.cpp  test_wav_contract.cpp
